--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"@vitejs/plugin-vue": "^3.1.2",
 		"@vitejs/plugin-vue-jsx": "^2.0.1",
 		"@vue/babel-plugin-jsx": "^1.1.1",
+		"@vueuse/shared": "^10.7.0",
 		"consola": "^2.15.3",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.25.0",
