--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "vite --config ./config/vite.config.dev.ts",
-		"build": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
+		"build": "vue-tsc --noEmit && vite build --max-old-space-size=8192 --config ./config/vite.config.prod.ts",
 		"report": "cross-env REPORT=true npm run build",
 		"preview": "npm run build && vite preview --host",
 		"type:check": "vue-tsc --noEmit --skipLibCheck",
