perf: 修改开发模式下按需组件导致页面缓慢的问题，并消除控制台警告，格式化代码，保持换行符一致性

--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -11,7 +11,7 @@
 	"menuWidth": 220,
 	"globalSettings": false,
 	"device": "desktop",
-	"tabBar": false,
+	"tabBar": true,
 	"logo": "logo.png",
 	"title": "快速开发框架",
 	"desc": "开放协作，拥抱未来"
