feat: 1、增加主题设置（主题色，菜单布局，皮肤，切换动画等） 2、增加autoImport自动引入插件

--- a/src/config/settings.json
+++ b/src/config/settings.json
@@ -3,7 +3,6 @@
 	"colorWeak": false,
 	"navbar": true,
 	"menu": true,
-	"topMenu": false,
 	"hideMenu": false,
 	"menuCollapse": false,
 	"footer": true,
@@ -14,5 +13,9 @@
 	"tabBar": true,
 	"logo": "logo.png",
 	"title": "快速开发框架",
-	"desc": "开放协作，拥抱未来"
+	"desc": "开放协作，拥抱未来",
+	"layout": "default",
+	"skin": "default",
+	"language": "zh_CN",
+	"animation": "gp-slide-down"
 }
