--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		]
 	},
 	"dependencies": {
-		"@arco-design/web-vue": "^2.53.3",
+		"@arco-design/color": "^0.4.0",
+		"@arco-design/web-vue": "^2.55.2",
 		"@tinymce/tinymce-vue": "^5.1.1",
 		"@vueuse/core": "^9.3.0",
 		"arco-design-pro-vue": "^2.7.2",
@@ -53,7 +54,7 @@
 		"sortablejs": "^1.15.0",
 		"stylelint-config-recommended-less": "^2.0.0",
 		"tinymce": "^6.8.2",
-		"vue": "^3.2.40",
+		"vue": "^3.4.27",
 		"vue-echarts": "^6.2.3",
 		"vue-i18n": "^9.2.2",
 		"vue-router": "^4.0.14",
@@ -100,6 +101,7 @@
 		"stylelint-config-standard": "^34.0.0",
 		"stylelint-order": "^6.0.3",
 		"typescript": "^4.8.4",
+		"unplugin-auto-import": "^0.17.6",
 		"unplugin-vue-components": "^0.24.1",
 		"vite": "^3.2.5",
 		"vite-plugin-compression": "^0.5.1",
