--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -16,6 +16,7 @@ jobs: # workflow中的job
    - name: Log in to Docker Hub
      uses: docker/login-action@v1 # 三方的action操作， 执行docker login
      with:
+      registry: ${{ secrets.DOCKERHUB_REGISTRY }}
       username: ${{ secrets.DOCKERHUB_USERNAME }} # 配置dockerhub的认证，在Github项目主页 【Settings】 -> 【Secrets】 添加对应变量
       password: ${{ secrets.DOCKERHUB_TOKEN }}
 
@@ -23,7 +24,7 @@ jobs: # workflow中的job
      id: meta
      uses: docker/metadata-action@v3 # 抽取项目信息，主要是镜像的tag
      with:
-      images: ${{ secrets.DOCKERHUB_USERNAME }}/adminweb
+      images: ${{ secrets.DOCKERHUB_REGISTRY }}/limes-cloud/adminweb
 
    - name: Build and push Docker image
      uses: docker/build-push-action@v2 # docker build & push
@@ -32,17 +33,3 @@ jobs: # workflow中的job
       push: true
       tags: ${{ steps.meta.outputs.tags }}
       labels: ${{ steps.meta.outputs.labels }}
-   - name: Deploy Docker
-     uses: appleboy/ssh-action@v0.1.10
-     with:
-      host: ${{ secrets.SERVER_HOST }} # 服务器ip地址 ; 需要去仓库的 settings/secrets/actions 去创建
-      username: ${{ secrets.SERVER_USER }} # 服务器用户名称；需要去仓库的 settings/secrets/actions 去创建
-      password: ${{ secrets.SERVER_PWD }} # 服务器密码；需要去仓库的 settings/secrets/actions 去创建
-      port: ${{ secrets.SERVER_PORT }} # 服务器端口，默认22；需要去仓库的 settings/secrets/actions 去创建
-      script: | # 重启更新镜像
-       docker stop adminweb
-       docker rm adminweb
-       docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/adminweb:latest
-       # docker login -u 你的github名称 -p 你的github token https://ghcr.io 
-       docker pull ${{ secrets.DOCKERHUB_USERNAME }}/adminweb
-       docker run -d -p 8080:80 --restart=always  --name adminweb ${{ secrets.DOCKERHUB_USERNAME }}/adminweb
