--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"sourceMap": true,
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
+		"outDir": "dist",
 		"baseUrl": ".",
 		"paths": {
 			"@/*": [
@@ -29,6 +30,7 @@
 		"auto-imports.d.ts"
 	],
 	"exclude": [
-		"node_modules"
+		"node_modules",
+		"dist"
 	]
 }
