--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
 	"include": [
 		"src/**/*",
 		"src/**/*.vue",
-		"src/type.d.ts",
-		"auto-imports.d.ts"
+		"src/type.d.ts"
+		// "auto-imports.d.ts"
 	],
 	"exclude": [
 		"node_modules",
