--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
 		"nprogress": "^0.2.0",
 		"pinia": "^2.0.23",
 		"postcss-less": "^6.0.0",
+		"qrcode": "^1.5.4",
 		"query-string": "^8.0.3",
 		"sortablejs": "^1.15.0",
 		"tinymce": "6",
